*lib/clan/clan_default.php -> GROUP BY condition again (see mysql 8 issues) does not accept an order anymore (rightfully)
*lib/tabledescriptor.php -> Default values that were number 0 (equals empty string) or empty strings were not synctable()'d into the database
[CHANGES]
*lib/commentary.php --> GMs can now delete their own comments
*home.php --> new hook for bottom display "index_bottom"
*modules.php --> modules can now have categories for headlines in navigations. Catgory "Easter|Egg" will set a headline "Easter" and then list "Egg" in module manager view

Changes to 1.2.8 +nb
[FIXES]
*forest.php -> $packofmonsters set to false by default
*lib/dbwrapper.php -> was missing somewhere.. my bad
*lib/errorhandling.php -> fixes stuff that brakes in php 7.x, no magic quotes anymore!
*lib/modules.php -> "function" is now a reserved keyword, which suckes in the module_hooks table... as it is a row there.
*lib/pageparts.php -> petitions are now able to be hooked into and resorted (page display), allows now resorting
*lib/commentary.php -> multibyte fixes to substr functions


Changes to 1.2.7 +nb
[CHANGES]
*healer.php -> IamCanDoit pointed out that the level 1 healing costs 0 and doesn't require a partial heal. Changed. Also the IFs and Else in companion heal wasn't looking good. Comments on commit 97c74f9
[FIXES]
*battle.php -> isset() needs to check for index values not existing
*prefs.php -> mail address defaulting to 127.0.0.1 in email change email (not nice, not critical), changed
*lib/mail/case_read.php, lib/petitions/petition_default.php -> instead of GET (report to admin), POST works better with long mails and won't break
*modules/* -> modules updated to current
[REMOVES]

[NEW]
*modules/charrestore.hp -> added char restorer

Changes to 1.2.6 +nb
[CHANGES]
*lib/buffs.php -> added strip_companion($name) which removes one or more companions safely
*lib/phpmailer -> removed, now new phpmailer in ext